fixes #1821 - make overflow visible for sidebar avatar entitites

--- a/app/stylesheets/ui_base/_base.sass
+++ b/app/stylesheets/ui_base/_base.sass
@@ -653,8 +653,11 @@ nav#nav-full
   padding: 10px
   float: right
   margin: 0
+  .round
+    +border-radius(5px)
   ul
     +clearfix
+    overflow: visible
   ul#nav4
     li
       +bordered-btm(!medium_grey_border,"dotted")
